--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,17 +3,44 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+resources:
+ repositories:
+   - repository: buildapp
+     type: github
+     endpoint: giri347
+     name: giri347/buildapp
+   - repository: webappdeploy-AzureDevops
+     type: github
+     endpoint: giri347
+     name: giri347/webappdeploy-AzureDevops
 trigger:
-- master
+- main
 
+
+parameters:
+  - name: select
+    displayName: select_buildrepo
+    values:
+      - buildapp
+      - webappdeploy-AzureDevops
 pool:
   vmImage: 'windows-latest'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+variables:
+  solution: '**/*.csproj'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+steps:
+  - checkout: self
+
+settings:
+
+- task: NuGetToolInstaller@1
+
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
+
