Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.csproj'
+  solution: '$(Build.SourcesDirectory)/$(Repo)/**/*.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
