Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ variables:
 steps:
 - checkout: self
 #- checkout: buildapp
-- checkout: github://sample-project/$(repo)
+- checkout: git://sample-project/$(repo)
 
 - task: NuGetToolInstaller@1
 
